shows images of all aspects at aspect selector

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="style.css">
+    <script src="aspect_translations.js" defer></script>
     <script src="graph.js" defer></script>
     <script src="aspect_graph.js" defer></script>
     <script src="script.js" defer></script>
