--- a/index.html
+++ b/index.html
@@ -12,7 +12,22 @@
 <body>
 
 <div id="aspect_selector"></div>
-<div id="board"></div>
+<div id="board">
+    <div class="hex-row">
+        <div class="hex"><div class="top"></div><div class="middle"></div><div class="bottom"></div></div>
+        <div class="hex"><div class="top"></div><div class="middle"></div><div class="bottom"></div></div>
+        <div class="hex"><div class="top"></div><div class="middle"></div><div class="bottom"></div></div>
+    </div>
+    <div class="hex-row even">
+        <div class="hex"><div class="top"></div><div class="middle"></div><div class="bottom"></div></div>
+        <div class="hex"><div class="top"></div><div class="middle"></div><div class="bottom"></div></div>
+    </div>
+    <div class="hex-row">
+        <div class="hex"><div class="top"></div><div class="middle"></div><div class="bottom"></div></div>
+        <div class="hex"><div class="top"></div><div class="middle"></div><div class="bottom"></div></div>
+        <div class="hex"><div class="top"></div><div class="middle"></div><div class="bottom"></div></div>
+    </div>
+</div>
 
 </body>
 
