made hexagonal grid generated using js not hardcoded

--- a/index.html
+++ b/index.html
@@ -7,26 +7,14 @@
     <script src="aspect_translations.js" defer></script>
     <script src="graph.js" defer></script>
     <script src="aspect_graph.js" defer></script>
+    <script src="hexagon_node.js" defer></script>
     <script src="script.js" defer></script>
 </head>
 <body>
 
 <div id="aspect_selector"></div>
 <div id="board">
-    <div class="hex-row">
-        <div class="hex"><div class="top"></div><div class="middle"></div><div class="bottom"></div></div>
-        <div class="hex"><div class="top"></div><div class="middle"></div><div class="bottom"></div></div>
-        <div class="hex"><div class="top"></div><div class="middle"></div><div class="bottom"></div></div>
-    </div>
-    <div class="hex-row even">
-        <div class="hex"><div class="top"></div><div class="middle"></div><div class="bottom"></div></div>
-        <div class="hex"><div class="top"></div><div class="middle"></div><div class="bottom"></div></div>
-    </div>
-    <div class="hex-row">
-        <div class="hex"><div class="top"></div><div class="middle"></div><div class="bottom"></div></div>
-        <div class="hex"><div class="top"></div><div class="middle"></div><div class="bottom"></div></div>
-        <div class="hex"><div class="top"></div><div class="middle"></div><div class="bottom"></div></div>
-    </div>
+
 </div>
 
 </body>
