--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 <body>
 
 <div id="aspect_selector"></div>
-<div id="board">
-
+<div id="board"></div>
+<div id="buttons">
+    <button id="reset-board">Reset Board</button>
+    <button id="new-board">New Board</button>
+    <button id="solve-board">Solve Board</button>
 </div>
 
 </body>
