added check to see if the board is complete

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div id="buttons">
     <button id="reset-board">Reset Board</button>
     <button id="new-board">New Board</button>
-    <button id="solve-board">Solve Board</button>
+    <button id="solve-board">Solve Board (MAY TAKE SEVERAL MINUTES FOR DISTANT START AND END NODES)</button>
 </div>
 
 </body>
