--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
 
 <div id="aspect_selector"></div>
 <div id="board"></div>
+<!--<script>
+    alert("test")
+</script>-->
 <div id="buttons">
     <button id="reset-board">Reset Board</button>
     <button id="new-board">New Board</button>
-    <button id="solve-board">Solve Board (MAY TAKE SEVERAL MINUTES FOR DISTANT START AND END NODES)</button>
+    <button id="solve-board">Solve Board</button>
 </div>
+
 
 </body>
 
