fixed buttons to reset and show solution to the board
made aspect selector into a grid and given all aspect images an id

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-
-<div id="aspect_selector"></div>
-<div id="board"></div>
+<div id="selector_board_container">
+    <div id="aspect_selector"></div>
+    <div id="board"></div>
+</div>
 <!--<script>
     alert("test")
 </script>-->
