implemented drag and drop operations to use the aspect selector as a drag and drop selector

--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
 <div id="selector_board_container">
     <div id="aspect_selector"></div>
     <div id="board"></div>
+    <div id="buttons">
+        <button id="new-board">New Board</button>
+        <button id="reset-board">Reset Board</button>
+        <button id="solve-board">Solve Board</button>
+        <img src="aspect_images/desiderium.png">
+    </div>
 </div>
 <!--<script>
     alert("test")
 </script>-->
-<div id="buttons">
-    <button id="reset-board">Reset Board</button>
-    <button id="new-board">New Board</button>
-    <button id="solve-board">Solve Board</button>
-</div>
 
 
 </body>
