added an info panel for the user to hover over aspects to get info

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <div id="selector_board_container">
     <div id="aspect_selector"></div>
     <div id="board"></div>
-    <div id="buttons">
+    <div id="button-pane">
         <button id="new-board">New Board</button>
         <button id="reset-board">Reset Board</button>
         <button id="solve-board">Solve Board</button>
-        <img src="aspect_images/desiderium.png">
+        <div id="info-panel"></div>
     </div>
 </div>
 <!--<script>
