--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
     <div id="board"></div>
     <br>
     <div id="button-pane">
-        <button id="new-board">New Board</button>
+        <div id="new-game-panel">
+            <label for="select-starting-num">Select Number Of Starting Aspects</label>
+            <select id="select-starting-num">
+                <option value=2>2</option>
+                <option value=3>3</option>
+                <option value=4>4</option>
+            </select>
+            <button id="new-board-button">New Board</button>
+        </div>
         <button id="reset-board">Reset Board</button>
         <button id="solve-board">Solve Board</button>
         <div id="info-panel"></div>
