made some ui changes
made aspect selector show names of aspects as well

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 <body>
 <div id="selector_board_container">
     <div id="aspect_selector"></div>
-    <br>
     <div id="board"></div>
-    <br>
     <div id="button-pane">
         <div id="new-game-panel">
             <label for="select-starting-num">Select Number Of Starting Aspects</label>
@@ -27,7 +25,7 @@
             <button id="new-board-button">New Board</button>
         </div>
         <button id="reset-board">Reset Board</button>
-        <button id="solve-board">Solve Board</button>
+        <button id="solve-board">Show Solution</button>
         <div id="info-panel"></div>
     </div>
 </div>
