--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Thaumcraft Research Practice</title>
     <link rel="stylesheet" href="style.css">
     <script src="aspect_translations.js" defer></script>
     <script src="graph.js" defer></script>
