made game show when won

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+<h1 id="game-info"></h1>
 <div id="selector_board_container">
     <div id="aspect_selector"></div>
     <div id="board"></div>
